--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RLM</string>
+    <string name="channel_name">Reminder Channel</string>
+    <string name="channel_description">Notifications for Reminders</string>
 </resources>
